# es-ann-verif

./: .gitattributes  LICENSE  pyproject.toml
dataset/: .gitignore  readme.md
preprocess/: Preprocess.ipynb
rally-config/race_dim_25/: document.json  document.json.bz2  index.json  search_vector_top1000.json  track.json  track.py
track/ann/: index.json  track.json
track/knn/: index.json  track.json
