[tool.poetry]
name = "preprocess"
version = "0.1.0"
description = ""
authors = ["Kazuma Arimura <k.arimura96@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
nltk = "^3.6.7"
gensim = "^4.1.2"
esrally = "^2.3.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
